--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,9 @@
             android:id="@+id/send_message_button"
             android:layout_gravity="right"/>
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/message_list" />
+
 </LinearLayout>
