--- a/app/src/main/res/layout/actionbar_main.xml
+++ b/app/src/main/res/layout/actionbar_main.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_marginEnd="23dp"
+    android:layout_marginRight="23dp"
     android:orientation="horizontal">
 
     <EditText
         android:id="@+id/edit_uname_text"
         android:inputType="textNoSuggestions"
-        android:minWidth="100dp"
+        android:minWidth="75dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -17,7 +21,10 @@
         android:id="@+id/edit_uname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/edit_uname_text"
+        android:layout_toRightOf="@id/edit_uname_text"
         android:background="@android:color/transparent"
-        android:src="@drawable/edit"/>
+        android:src="@drawable/edit"
+        android:layout_centerVertical="true" />
 
-</LinearLayout>
+</RelativeLayout>
