change edit button to tick on edit

--- a/app/src/main/res/layout/actionbar_main.xml
+++ b/app/src/main/res/layout/actionbar_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"/>
 
     <ImageButton
-        android:id="@+id/edit_uname"
+        android:id="@+id/edit_uname_toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/edit_uname_text"
