--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -6,7 +6,9 @@
 
     <ListView android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:clickable="false"
+        android:listSelector="@android:color/transparent"/>
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/new_message_fab"
