--- a/app/src/main/res/layout/listitem_follow.xml
+++ b/app/src/main/res/layout/listitem_follow.xml
@@ -11,36 +11,35 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/message_user"
+            android:id="@+id/follow_uname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
             style="@android:style/TextAppearance.DeviceDefault.Medium"
             android:textStyle="bold"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"/>
 
         <TextView
-            android:id="@+id/message_time"
+            android:id="@+id/follow_count_message"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/message_user"
+            android:layout_toRightOf="@+id/follow_uname"
             style="@android:style/TextAppearance.DeviceDefault.Small"
             android:singleLine="true"
             android:ellipsize="end"
-            android:layout_alignBaseline="@id/message_user"
+            android:layout_alignBaseline="@id/follow_uname"
             android:gravity="right" />
 
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/message_body"
+        android:id="@+id/follow_uids"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/follow_uname"
+        style="@android:style/TextAppearance.DeviceDefault.Small"
         android:ellipsize="end"
-        android:maxLines="2"
-        style="@android:style/TextAppearance.DeviceDefault.Medium"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp" />
+        android:paddingBottom="8dp"/>
 
 </LinearLayout>
